# paper-embedding-demo

./: .gitignore  README.md  app.py  preprocess.py  pyproject.toml
src/: dimension_reduction.py  embedding.py  init_logger.py  paper.py
